--- a/publication/stats_articles/template/index.html
+++ b/publication/stats_articles/template/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="Using data on the age, sex, ethnicity, and criminal involvement of more than 14 million residents of all ages residing in approximately 4,000 Dutch neighborhoods, we test if an individual&#39;s criminal involvement is affected by the proportion of criminals living in his or her residential neighborhood. We develop a binomial discrete choice model for criminal involvement and estimate it on individual data. We control for both the endogeneity that may be related to unobserved neighborhood characteristics and for sorting behavior. We find significant social interaction effects, but our findings do not imply multiple equilibria or large multiplier effects.&lt;br&gt;&lt;br&gt;">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://numbersman77.netlify.com/publication/stats_articles/2017-article-social-interactions/">
+  <link rel="alternate" hreflang="en-us" href="https://numbersman77.netlify.com/publication/stats_articles/template/">
 
   
 
@@ -68,7 +68,7 @@
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://numbersman77.netlify.com/publication/stats_articles/2017-article-social-interactions/">
+  <link rel="canonical" href="https://numbersman77.netlify.com/publication/stats_articles/template/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -76,7 +76,7 @@
   <meta property="twitter:creator" content="@numbersman77">
   
   <meta property="og:site_name" content="Kaspar Rufibach">
-  <meta property="og:url" content="https://numbersman77.netlify.com/publication/stats_articles/2017-article-social-interactions/">
+  <meta property="og:url" content="https://numbersman77.netlify.com/publication/stats_articles/template/">
   <meta property="og:title" content="Social interactions and crime revisited: An investigation using individual offender data in Dutch neighborhoods | Kaspar Rufibach">
   <meta property="og:description" content="Using data on the age, sex, ethnicity, and criminal involvement of more than 14 million residents of all ages residing in approximately 4,000 Dutch neighborhoods, we test if an individual&#39;s criminal involvement is affected by the proportion of criminals living in his or her residential neighborhood. We develop a binomial discrete choice model for criminal involvement and estimate it on individual data. We control for both the endogeneity that may be related to unobserved neighborhood characteristics and for sorting behavior. We find significant social interaction effects, but our findings do not imply multiple equilibria or large multiplier effects.&lt;br&gt;&lt;br&gt;">
   <meta property="og:locale" content="en-us">
@@ -263,35 +263,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Social%20interactions%20and%20crime%20revisited%3a%20An%20investigation%20using%20individual%20offender%20data%20in%20Dutch%20neighborhoods&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2017-article-social-interactions%2f"
+         href="https://twitter.com/intent/tweet?text=Social%20interactions%20and%20crime%20revisited%3a%20An%20investigation%20using%20individual%20offender%20data%20in%20Dutch%20neighborhoods&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2ftemplate%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2017-article-social-interactions%2f"
+         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2ftemplate%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2017-article-social-interactions%2f&amp;title=Social%20interactions%20and%20crime%20revisited%3a%20An%20investigation%20using%20individual%20offender%20data%20in%20Dutch%20neighborhoods"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2ftemplate%2f&amp;title=Social%20interactions%20and%20crime%20revisited%3a%20An%20investigation%20using%20individual%20offender%20data%20in%20Dutch%20neighborhoods"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2017-article-social-interactions%2f&amp;title=Social%20interactions%20and%20crime%20revisited%3a%20An%20investigation%20using%20individual%20offender%20data%20in%20Dutch%20neighborhoods"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2ftemplate%2f&amp;title=Social%20interactions%20and%20crime%20revisited%3a%20An%20investigation%20using%20individual%20offender%20data%20in%20Dutch%20neighborhoods"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Social%20interactions%20and%20crime%20revisited%3a%20An%20investigation%20using%20individual%20offender%20data%20in%20Dutch%20neighborhoods&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2017-article-social-interactions%2f">
+         href="mailto:?subject=Social%20interactions%20and%20crime%20revisited%3a%20An%20investigation%20using%20individual%20offender%20data%20in%20Dutch%20neighborhoods&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2ftemplate%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -420,10 +420,13 @@
   <nav>
   <ul class="pager">
     
-    <li class="previous"><a href="https://numbersman77.netlify.com/publication/stats_articles/template/"><span
-      aria-hidden="true">&larr;</span> Social interactions and crime revisited: An investigation using individual offender data in Dutch neighborhoods</a></li>
+    <li class="previous"><a href="https://numbersman77.netlify.com/publication/stats_articles/2008-01-01_a_second_marshall_/"><span
+      aria-hidden="true">&larr;</span> A second {M}arshall inequality in convex estimation</a></li>
     
 
+    
+    <li class="next"><a href="https://numbersman77.netlify.com/publication/stats_articles/2017-article-social-interactions/">Social interactions and crime revisited: An investigation using individual offender data in Dutch neighborhoods <span
+      aria-hidden="true">&rarr;</span></a></li>
     
   </ul>
 </nav>
