--- a/publication/stats_articles/template/index.html
+++ b/publication/stats_articles/template/index.html
@@ -421,12 +421,9 @@
   <ul class="pager">
     
     <li class="previous"><a href="https://numbersman77.netlify.com/publication/stats_articles/2008-01-01_a_second_marshall_/"><span
-      aria-hidden="true">&larr;</span> A second {M}arshall inequality in convex estimation</a></li>
+      aria-hidden="true">&larr;</span> A second Marshall inequality in convex estimation</a></li>
     
 
-    
-    <li class="next"><a href="https://numbersman77.netlify.com/publication/stats_articles/2017-article-social-interactions/">Social interactions and crime revisited: An investigation using individual offender data in Dutch neighborhoods <span
-      aria-hidden="true">&rarr;</span></a></li>
     
   </ul>
 </nav>
