--- a/publication/stats_articles/template/index.html
+++ b/publication/stats_articles/template/index.html
@@ -17,7 +17,7 @@
       
     
   
-  <meta name="description" content="Using data on the age, sex, ethnicity, and criminal involvement of more than 14 million residents of all ages residing in approximately 4,000 Dutch neighborhoods, we test if an individual&#39;s criminal involvement is affected by the proportion of criminals living in his or her residential neighborhood. We develop a binomial discrete choice model for criminal involvement and estimate it on individual data. We control for both the endogeneity that may be related to unobserved neighborhood characteristics and for sorting behavior. We find significant social interaction effects, but our findings do not imply multiple equilibria or large multiplier effects.&lt;br&gt;&lt;br&gt;">
+  <meta name="description" content="">
 
   
   <link rel="alternate" hreflang="en-us" href="https://numbersman77.netlify.com/publication/stats_articles/template/">
@@ -78,12 +78,12 @@
   <meta property="og:site_name" content="Kaspar Rufibach">
   <meta property="og:url" content="https://numbersman77.netlify.com/publication/stats_articles/template/">
   <meta property="og:title" content="Social interactions and crime revisited: An investigation using individual offender data in Dutch neighborhoods | Kaspar Rufibach">
-  <meta property="og:description" content="Using data on the age, sex, ethnicity, and criminal involvement of more than 14 million residents of all ages residing in approximately 4,000 Dutch neighborhoods, we test if an individual&#39;s criminal involvement is affected by the proportion of criminals living in his or her residential neighborhood. We develop a binomial discrete choice model for criminal involvement and estimate it on individual data. We control for both the endogeneity that may be related to unobserved neighborhood characteristics and for sorting behavior. We find significant social interaction effects, but our findings do not imply multiple equilibria or large multiplier effects.&lt;br&gt;&lt;br&gt;">
+  <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
   
-  <meta property="article:published_time" content="2017-12-26T00:00:00&#43;00:00">
+  <meta property="article:published_time" content="1900-12-26T00:00:00&#43;00:00">
   
-  <meta property="article:modified_time" content="2017-12-26T00:00:00&#43;00:00">
+  <meta property="article:modified_time" content="1900-12-26T00:00:00&#43;00:00">
   
 
   
@@ -307,9 +307,6 @@
     
 
     
-    <h3>Abstract</h3>
-    <p class="pub-abstract" itemprop="text">Using data on the age, sex, ethnicity, and criminal involvement of more than 14 million residents of all ages residing in approximately 4,000 Dutch neighborhoods, we test if an individual&rsquo;s criminal involvement is affected by the proportion of criminals living in his or her residential neighborhood. We develop a binomial discrete choice model for criminal involvement and estimate it on individual data. We control for both the endogeneity that may be related to unobserved neighborhood characteristics and for sorting behavior. We find significant social interaction effects, but our findings do not imply multiple equilibria or large multiplier effects.<br><br></p>
-    
 
     
     <div class="row">
@@ -351,7 +348,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Date</div>
           <div class="col-xs-12 col-sm-9" itemprop="datePublished">
-            2017
+            1900
           </div>
         </div>
       </div>
@@ -420,10 +417,10 @@
   <nav>
   <ul class="pager">
     
-    <li class="previous"><a href="https://numbersman77.netlify.com/publication/stats_articles/2008-01-01_a_second_marshall_/"><span
-      aria-hidden="true">&larr;</span> A second Marshall inequality in convex estimation</a></li>
-    
 
+    
+    <li class="next"><a href="https://numbersman77.netlify.com/publication/stats_articles/2001_01_01_evk/">Eintrittsraten und Austrittswahrscheinlichkeiten EVK 2000 <span
+      aria-hidden="true">&rarr;</span></a></li>
     
   </ul>
 </nav>
