--- a/publication/stats_articles/template/index.html
+++ b/publication/stats_articles/template/index.html
@@ -254,7 +254,7 @@
     <h1 itemprop="name">Social interactions and crime revisited: An investigation using individual offender data in Dutch neighborhoods</h1>
     <span class="pub-authors" itemprop="author">
       
-      Wim Bernasco, Thomas de Graaff, Jan Rouwendal, Wouter Steenbeek
+      Kaspar Rufibach
       
     </span>
     <span class="pull-right">
@@ -381,16 +381,20 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://doi.org/10.1162/REST_a_00656" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="https://numbersman77.netlify.com/" target="_blank" rel="noopener">
   Link to journal
 </a>
 
-<a class="btn btn-primary btn-outline" href="https://www.mitpressjournals.org/doi/suppl/10.1162/REST_a_00656/suppl_file/REST_a_00656-esupp.pdf" target="_blank" rel="noopener">
-  Supplemental Appendix
+<a class="btn btn-primary btn-outline" href="https://numbersman77.netlify.com/" target="_blank" rel="noopener">
+  arxiv
 </a>
 
-<a class="btn btn-primary btn-outline" href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/3SLMJY" target="_blank" rel="noopener">
-  Replication Dataset and Code
+<a class="btn btn-primary btn-outline" href="https://numbersman77.netlify.com/" target="_blank" rel="noopener">
+  R package
+</a>
+
+<a class="btn btn-primary btn-outline" href="https://numbersman77.netlify.com/" target="_blank" rel="noopener">
+  github repository
 </a>
 
 
