--- a/software/template/index.html
+++ b/software/template/index.html
@@ -17,10 +17,10 @@
       
     
   
-  <meta name="description" content="We examine the spatial concentration and spatial stability of home burglary (N=46,684) on street segments (N=26,875) in the context of a substantial city-level burglary drop from 2005 to 2014 in Antwerp, Belgium. Longitudinal trends in spatial concentrations of burglary are considered using descriptive statistics, generalized Gini coefficients, local Getis-Ord statistics, and a longitudinal extension of Andresen’s non-parametric spatial point pattern test (SPPT). Home burglary is substantially concentrated on street segments. Burglary point patterns exhibit a moderate to high degree of spatial stability over time. About 87% of street segments with burglary experienced a net decrease in crime and less than 2% of street segments with burglary experienced a net increase. The citywide home burglary drop manifested itself rather uniformly across street segments and the majority of street segments that experienced burglary contributed relatively equally to the crime drop. In other words, we do not find strong evidence that the city-level crime drop can be tied to substantial decreases in a few specific places, nor do we find that the reductions in burglary are spatially concentrated.">
+  <meta name="description" content="">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://numbersman77.netlify.com/talk/2017-asc/">
+  <link rel="alternate" hreflang="en-us" href="https://numbersman77.netlify.com/software/template/">
 
   
 
@@ -68,7 +68,7 @@
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://numbersman77.netlify.com/talk/2017-asc/">
+  <link rel="canonical" href="https://numbersman77.netlify.com/software/template/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -76,19 +76,19 @@
   <meta property="twitter:creator" content="@numbersman77">
   
   <meta property="og:site_name" content="Kaspar Rufibach">
-  <meta property="og:url" content="https://numbersman77.netlify.com/talk/2017-asc/">
-  <meta property="og:title" content="A Micro-Spatial Longitudinal Analysis of Home Burglary Concentration and Spatial Stability in the Context of a Crime Drop | Kaspar Rufibach">
-  <meta property="og:description" content="We examine the spatial concentration and spatial stability of home burglary (N=46,684) on street segments (N=26,875) in the context of a substantial city-level burglary drop from 2005 to 2014 in Antwerp, Belgium. Longitudinal trends in spatial concentrations of burglary are considered using descriptive statistics, generalized Gini coefficients, local Getis-Ord statistics, and a longitudinal extension of Andresen’s non-parametric spatial point pattern test (SPPT). Home burglary is substantially concentrated on street segments. Burglary point patterns exhibit a moderate to high degree of spatial stability over time. About 87% of street segments with burglary experienced a net decrease in crime and less than 2% of street segments with burglary experienced a net increase. The citywide home burglary drop manifested itself rather uniformly across street segments and the majority of street segments that experienced burglary contributed relatively equally to the crime drop. In other words, we do not find strong evidence that the city-level crime drop can be tied to substantial decreases in a few specific places, nor do we find that the reductions in burglary are spatially concentrated.">
+  <meta property="og:url" content="https://numbersman77.netlify.com/software/template/">
+  <meta property="og:title" content="Package ‘smoothtail’: Smooth Estimation of GPD Shape Parameter | Kaspar Rufibach">
+  <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
   
-  <meta property="article:published_time" content="2017-01-01T00:00:00&#43;01:00">
+  <meta property="article:published_time" content="2006-01-02T00:00:00&#43;00:00">
   
-  <meta property="article:modified_time" content="2017-01-01T00:00:00&#43;01:00">
-  
-
+  <meta property="article:modified_time" content="2006-01-02T00:00:00&#43;00:00">
   
 
-  <title>A Micro-Spatial Longitudinal Analysis of Home Burglary Concentration and Spatial Stability in the Context of a Crime Drop | Kaspar Rufibach</title>
+  
+
+  <title>Package ‘smoothtail’: Smooth Estimation of GPD Shape Parameter | Kaspar Rufibach</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -245,53 +245,77 @@
   </div>
 </nav>
 
-<div class="pub" itemscope itemtype="http://schema.org/Event">
+
+<article class="article" itemscope itemtype="http://schema.org/Article">
 
   
 
 
   <div class="article-container">
+    <div class="article-inner">
+      <h1 itemprop="name">Package ‘smoothtail’: Smooth Estimation of GPD Shape Parameter</h1>
 
-    <div class="pub-title">
-      <h1 itemprop="name">A Micro-Spatial Longitudinal Analysis of Home Burglary Concentration and Spatial Stability in the Context of a Crime Drop</h1>
-      <span class="pub-authors" itemprop="author">
-        
-      </span>
-      <span class="pull-right">
-        
+      
+
+<div class="article-metadata">
+
+  <span class="article-date">
+    
+    <time datetime="2006-01-02 00:00:00 &#43;0000 UTC" itemprop="datePublished dateModified">
+      Jan 2, 2006
+    </time>
+  </span>
+  <span itemscope itemprop="author publisher" itemtype="http://schema.org/Person">
+    <meta itemprop="name" content="Kaspar Rufibach">
+  </span>
+
+  
+  <span class="middot-divider"></span>
+  <span class="article-reading-time">
+    0 min read
+  </span>
+  
+
+  
+  
+
+  
+
+  
+  
 <div class="share-box" aria-hidden="true">
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=A%20Micro-Spatial%20Longitudinal%20Analysis%20of%20Home%20Burglary%20Concentration%20and%20Spatial%20Stability%20in%20the%20Context%20of%20a%20Crime%20Drop&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2f2017-asc%2f"
+         href="https://twitter.com/intent/tweet?text=Package%20%e2%80%98smoothtail%e2%80%99%3a%20Smooth%20Estimation%20of%20GPD%20Shape%20Parameter&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2ftemplate%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2f2017-asc%2f"
+         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2ftemplate%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2f2017-asc%2f&amp;title=A%20Micro-Spatial%20Longitudinal%20Analysis%20of%20Home%20Burglary%20Concentration%20and%20Spatial%20Stability%20in%20the%20Context%20of%20a%20Crime%20Drop"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2ftemplate%2f&amp;title=Package%20%e2%80%98smoothtail%e2%80%99%3a%20Smooth%20Estimation%20of%20GPD%20Shape%20Parameter"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2f2017-asc%2f&amp;title=A%20Micro-Spatial%20Longitudinal%20Analysis%20of%20Home%20Burglary%20Concentration%20and%20Spatial%20Stability%20in%20the%20Context%20of%20a%20Crime%20Drop"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2ftemplate%2f&amp;title=Package%20%e2%80%98smoothtail%e2%80%99%3a%20Smooth%20Estimation%20of%20GPD%20Shape%20Parameter"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=A%20Micro-Spatial%20Longitudinal%20Analysis%20of%20Home%20Burglary%20Concentration%20and%20Spatial%20Stability%20in%20the%20Context%20of%20a%20Crime%20Drop&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2ftalk%2f2017-asc%2f">
+         href="mailto:?subject=Package%20%e2%80%98smoothtail%e2%80%99%3a%20Smooth%20Estimation%20of%20GPD%20Shape%20Parameter&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fsoftware%2ftemplate%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -299,96 +323,30 @@
 </div>
 
 
-      </span>
-    </div>
+  
 
-    
-      <h3>Abstract</h3>
-      <p class="pub-abstract" itemprop="text">We examine the spatial concentration and spatial stability of home burglary (N=46,684) on street segments (N=26,875) in the context of a substantial city-level burglary drop from 2005 to 2014 in Antwerp, Belgium. Longitudinal trends in spatial concentrations of burglary are considered using descriptive statistics, generalized Gini coefficients, local Getis-Ord statistics, and a longitudinal extension of Andresen’s non-parametric spatial point pattern test (SPPT). Home burglary is substantially concentrated on street segments. Burglary point patterns exhibit a moderate to high degree of spatial stability over time. About 87% of street segments with burglary experienced a net decrease in crime and less than 2% of street segments with burglary experienced a net increase. The citywide home burglary drop manifested itself rather uniformly across street segments and the majority of street segments that experienced burglary contributed relatively equally to the crime drop. In other words, we do not find strong evidence that the city-level crime drop can be tied to substantial decreases in a few specific places, nor do we find that the reductions in burglary are spatially concentrated.</p>
-    
-
-    <div class="row">
-      <div class="col-sm-1"></div>
-      <div class="col-sm-10">
-        <div class="row">
-          <div class="col-xs-12 col-sm-3 pub-row-heading">Date</div>
-          <div class="col-xs-12 col-sm-9" itemprop="datePublished">
-            
-            Nov 17, 2017
-            <div class="talk-time">
-              
-                12:30
-                
-                  &mdash; 13:50
-                
-              
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-1"></div>
-    </div>
-    <div class="visible-xs space-below"></div>
-
-    <div class="row">
-      <div class="col-sm-1"></div>
-      <div class="col-sm-10">
-        <div class="row">
-          <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
-          <div class="col-xs-12 col-sm-9">
-            
-            Annual meeting of the American Society of Criminology (ASC)
-            
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-1"></div>
-    </div>
-    <div class="visible-xs space-below"></div>
-
-    
-    <div class="row">
-      <div class="col-sm-1"></div>
-      <div class="col-sm-10">
-        <div class="row">
-          <div class="col-xs-12 col-sm-3 pub-row-heading">Location</div>
-          <div class="col-xs-12 col-sm-9">Philadelphia, USA</div>
-        </div>
-      </div>
-      <div class="col-sm-1"></div>
-    </div>
-    <div class="visible-xs space-below"></div>
-    
-
-    
-
-    <div class="space-below"></div>
-
-    <div class="article-style">
-      <!-- Embed your slides or video here using [shortcodes](https://sourcethemes.com/academic/post/writing-markdown-latex/). Further details can easily be added using *Markdown* and $\rm \LaTeX$ math code. -->
-
-    </div>
-
-    
-
-
-  </div>
 </div>
 
-<div class="container">
-  <nav>
-  <ul class="pager">
-    
-    <li class="previous"><a href="https://numbersman77.netlify.com/talk/2017-oslo/"><span
-      aria-hidden="true">&larr;</span> How businesses and facilities affect crime: a fixed effects analysis of street segments over a ten-year period in The Hague, The Netherlands</a></li>
-    
 
-    
-    <li class="next"><a href="https://numbersman77.netlify.com/talk/2018-stlouis/">Testing for similarity in area-based spatial patterns: how the pattern of pedestrian stops by the NYPD differs from crime (2006-2016) <span
-      aria-hidden="true">&rarr;</span></a></li>
-    
-  </ul>
-</nav>
+      <div class="article-style" itemprop="articleBody">
+        <!-- More detail can easily be written here using *Markdown* and $\rm \LaTeX$ math code. -->
+
+      </div>
+
+      
+
+    </div>
+  </div>
+
+</article>
+
+
+
+
+
+
+<div class="article-container">
+  
 
 </div>
 
